--- a/Bip The Guy/Base.lproj/Main.storyboard
+++ b/Bip The Guy/Base.lproj/Main.storyboard
@@ -49,6 +49,7 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="Ylm-X1-vTJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="7ew-qL-UQ7"/>
                             <constraint firstItem="aLv-BE-5En" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="849-Cd-TTl"/>
@@ -61,6 +62,9 @@
                             <constraint firstItem="Ylm-X1-vTJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pr3-6h-GQE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="z4Z-dA-Vti" appends="YES" id="8ze-vw-mqr"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="imageToPunch" destination="Ylm-X1-vTJ" id="J5E-qS-6BP"/>
@@ -69,7 +73,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="z4Z-dA-Vti">
                     <connections>
-                        <action selector="imageTapped:" destination="BYZ-38-t0r" id="f9V-y4-P1H"/>
+                        <action selector="imageTapped:" destination="BYZ-38-t0r" id="Tcn-gK-wWs"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
